fixed toggle visibility

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,18 +20,19 @@ body {
   border-image-slice: 1;
   border-radius: 4px;
   margin: 0px;
-   /* Decorative grid background */
-  background-image: 
-    linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px), 
+  /* Decorative grid background */
+  background-image: linear-gradient(
+      90deg,
+      rgba(0, 0, 0, 0.05) 1px,
+      transparent 1px
+    ),
     linear-gradient(180deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
   background-size: 20px 20px; /* Adjust the size of the grid squares */
 }
 
-
-
 body.light-theme {
-    background-color: #f0f0f5;
-    color: #333;
+  background-color: #f0f0f5;
+  color: #333;
 }
 
 body.light-theme .nav-link {
@@ -47,19 +48,21 @@ body.light-theme h3 {
 }
 
 body.light-theme .category-frame {
-    border: 1px #084c61;
-    border-style: groove;
-    border-radius: 5px;
-    box-shadow: 0px 4px 16px #084c61;
+  border: 1px #084c61;
+  border-style: groove;
+  border-radius: 5px;
+  box-shadow: 0px 4px 16px #084c61;
 }
 body.light-theme .user-input::placeholder,
-.user-message::placeholder, body.light-theme .user-message::placeholder  {
+.user-message::placeholder,
+body.light-theme .user-message::placeholder {
   font-weight: 100;
   color: #333;
   letter-spacing: 0.04em;
 }
 
-body.light-theme .user-input, body.light-theme .user-message {
+body.light-theme .user-input,
+body.light-theme .user-message {
   color: #333;
   font-weight: 100;
 }
@@ -68,18 +71,19 @@ body.light-theme .footer-list-item-link {
   color: #333;
 }
 
-
-
 body.dark-theme {
-      background-color: #2e282a;
-      color: #ffc914;
-      background-image: 
-    linear-gradient(90deg, rgba(255, 255, 255, 0.1) 1px, transparent 1px), 
+  background-color: #2e282a;
+  color: #ffc914;
+  background-image: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0.1) 1px,
+      transparent 1px
+    ),
     linear-gradient(180deg, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
-
 }
 
-body.dark-theme .user-input, body.dark-theme .user-message {
+body.dark-theme .user-input,
+body.dark-theme .user-message {
   color: #ffc914;
   font-weight: 100;
 }
@@ -162,8 +166,8 @@ img {
 }
 
 .theme-toggle.active .toggle-circle {
-    left: calc(100% - 28px);
-    background-color: #4d4d4d;
+  left: calc(100% - 28px);
+  background-color: #4d4d4d;
 }
 
 /* Theme Toggle Styles */
@@ -176,6 +180,9 @@ img {
   align-items: center;
 }
 
+.hidden {
+  display: none;
+}
 
 @media (min-width: 320px) {
   .theme-toggle-container {
@@ -198,7 +205,6 @@ img {
     right: 20px; /* Keep the same right spacing */
   }
 }
-
 
 .section-title {
   color: #f7f9f9;
@@ -243,8 +249,6 @@ img {
     padding: 24px;
   }
 }
-
-
 
 .wrapper {
   display: block;
@@ -842,8 +846,6 @@ footer {
   }
 }
 
-
-
 @media screen and (max-width: 768px) {
   .container {
     max-width: 100%;
@@ -851,8 +853,6 @@ footer {
     padding-right: 64px;
   }
 }
-
-
 
 @media (min-width: 1158px) {
   .container {
